13-istio/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.mr-niu.cn
    http:
      paths:
      - backend:
          service: 
            name: grafana
            port: 
              number: 3000
        path: /
        pathType: Prefix
