13-istio/ingress-kiali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
  - host: kiali.mr-niu.cn
    http:
      paths:
      - backend:
          service: 
            name: kiali
            port: 
              number: 20001
        path: /
        pathType: Prefix
