13-istio/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.mr-niu.cn
    http:
      paths:
      - backend:
          service: 
            name: prometheus
            port: 
              number: 9090
        path: /
        pathType: Prefix
